--- a/apps/front/Cargo.toml
+++ b/apps/front/Cargo.toml
@@ -13,4 +13,10 @@ once_cell="1.18.0"
 env_logger="0.10.0"
 leptos = "0.4.5"
 actix-files = { version = "0.6.2", features = ["actix-server"] }
-
+actix = "0.13.5"
+[dependencies.uuid]
+version = "1.10.0"
+features = [
+    "v4",
+    "fast-rng",
+]
