--- a/apps/front/Cargo.toml
+++ b/apps/front/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 utils = { path = "../../libs/utils/" }
 actix-web = "4.8.0"
 actix-web-actors = "4.3.0"
-serde = "1.0.204"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
 dotenv="0.15.0"
 once_cell="1.18.0"
 env_logger="0.10.0"
-leptos = "0.6.12"
 actix-files = { version = "0.6.2", features = ["actix-server"] }
 actix = "0.13.5"
+tera = "1.20.0"
 [dependencies.uuid]
 version = "1.10.0"
 features = [
