--- a/apps/live-reload/Cargo.toml
+++ b/apps/live-reload/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "front"
+name = "live-reload"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-utils = { path = "../../libs/utils/" }
 actix-web = "4.8.0"
 actix-web-actors = "4.3.0"
 actix-files = { version = "0.6.2", features = ["actix-server"] }
@@ -12,9 +11,6 @@ actix = "0.13.5"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 dotenv="0.15.0"
-once_cell="1.18.0"
-env_logger="0.10.0"
-tera = "1.20.0"
 [dependencies.uuid]
 version = "1.10.0"
 features = [
